# snes

./: CMakeLists.txt
src/: cpu.c  main.c  snes.c
src/inc/: cpu.h  memory.h  snes.h  util.h
